--- a/app-core/pom.xml
+++ b/app-core/pom.xml
@@ -16,8 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
