--- a/pom.xml
+++ b/pom.xml
@@ -8,29 +8,39 @@
 
     <modules>
         <module>app-core</module>
+        <module>app-dao</module>
     </modules>
 
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <org.springframework.version>4.1.1.RELEASE</org.springframework.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>app-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>app-dao</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- Tests -->
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>6.8</version>
                 <scope>test</scope>
             </dependency>
+
 
             <!-- Spring -->
             <dependency>
@@ -49,6 +59,16 @@
                 <version>${org.springframework.version}</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
 
             <!-- Logging -->
             <dependency>
@@ -61,6 +81,21 @@
                 <artifactId>log4j-core</artifactId>
                 <version>2.6.1</version>
             </dependency>
+
+            <!-- HSQLDB -->
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>2.3.4</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.5</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
