--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>app-core</module>
         <module>app-dao</module>
         <module>app-service</module>
+        <module>app-rest</module>
     </modules>
 
     <properties>
@@ -40,11 +41,24 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>app-rest</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- Tests -->
             <dependency>
                 <groupId>org.testng</groupId>
                 <artifactId>testng</artifactId>
                 <version>6.8</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.easymock</groupId>
+                <artifactId>easymock</artifactId>
+                <version>3.4</version>
                 <scope>test</scope>
             </dependency>
 
@@ -76,6 +90,16 @@
                 <artifactId>spring-jdbc</artifactId>
                 <version>${org.springframework.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-webmvc</artifactId>
+                <version>${org.springframework.version}</version>
+            </dependency>
 
             <!-- Logging -->
             <dependency>
@@ -102,6 +126,21 @@
                 <artifactId>commons-io</artifactId>
                 <version>2.5</version>
             </dependency>
+
+
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>2.8.0</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
