--- a/app-dao/src/main/resources/sql-scripts.properties
+++ b/app-dao/src/main/resources/sql-scripts.properties
@@ -5,6 +5,7 @@ get_driver_by_id_path=/sql/get_driver_by_id.sql
 get_driver_by_name_path=/sql/get_driver_by_name.sql
 get_drivers_by_car_path=/sql/get_drivers_by_car.sql
 update_driver_path=/sql/update_driver.sql
+get_driver_by_car_number_path=/sql/get_driver_by_car_number.sql
 
 add_trip_path=/sql/add_trip.sql
 get_all_trips_path=/sql/get_all_trips.sql
