add annotations for table's columns in database

--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
                 <version>9.3.10.v20160621</version>
             </dependency>
 
+            <dependency>
+                <groupId>javax.persistence</groupId>
+                <artifactId>persistence-api</artifactId>
+                <version>1.0.2</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
