--- a/app-web/pom.xml
+++ b/app-web/pom.xml
@@ -15,12 +15,16 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.sphincs</groupId>
+            <artifactId>app-service</artifactId>
+        </dependency>
+<!--
         <dependency>
             <groupId>com.sphincs</groupId>
             <artifactId>app-rest</artifactId>
         </dependency>
-
+-->
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
@@ -55,6 +59,23 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-servlets</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+
+        <!-- HSQLDB -->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+
 
 
     </dependencies>
