--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <module>app-core</module>
         <module>app-dao</module>
         <module>app-service</module>
-<!--        <module>app-rest</module>  -->
+        <module>app-rest</module>
         <module>app-web</module>
     </modules>
 
@@ -41,13 +41,21 @@
                 <artifactId>app-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
-<!--
+
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>app-rest</artifactId>
                 <version>${project.version}</version>
             </dependency>
--->
+
+            <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+            <dependency>
+                <groupId>javax.validation</groupId>
+                <artifactId>validation-api</artifactId>
+                <version>1.0.0.GA</version>
+            </dependency>
+
+
             <!-- Tests -->
             <dependency>
                 <groupId>org.testng</groupId>
