--- a/app-dao/pom.xml
+++ b/app-dao/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.sphincs</groupId>
         <artifactId>logisticcenter</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -16,6 +16,7 @@
 
     <dependencies>
 
+        <!--Modules-->
         <dependency>
             <groupId>com.sphincs</groupId>
             <artifactId>app-core</artifactId>
