--- a/app-rest/pom.xml
+++ b/app-rest/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.sphincs</groupId>
         <artifactId>logisticcenter</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
