--- a/app-service/pom.xml
+++ b/app-service/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.sphincs</groupId>
         <artifactId>logisticcenter</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <properties>
@@ -16,6 +16,7 @@
 
     <dependencies>
 
+        <!--Modules-->
         <dependency>
             <groupId>com.sphincs</groupId>
             <artifactId>app-core</artifactId>
@@ -52,10 +53,9 @@
             <artifactId>spring-test</artifactId>
         </dependency>
 
-        <!-- HSQLDB -->
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
         </dependency>
 
         <!-- Tests -->
@@ -73,6 +73,7 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>commons-io</groupId>
