--- a/app-core/pom.xml
+++ b/app-core/pom.xml
@@ -8,9 +8,9 @@
     <packaging>jar</packaging>
 
     <parent>
-        <artifactId>demo</artifactId>
+        <artifactId>logisticcenter</artifactId>
         <groupId>com.sphincs</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
 </project>
